--- a/security.html
+++ b/security.html
@@ -84,7 +84,7 @@
 <p>2 days ago ... Combine CyberSecurity domain expertise and contemporary data science skills 
 to enhance cyber adversary detection, network defense, and SOC process?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oJWx9fw5&__jvst=Employee+Referral&__jvsd=s3C3Jfwb&__jvsc=Twitter&bid=nH0QTKwF'>ServiceNow Careers - Senior Security Risk Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oJWx9fw5&__jvst=Employee+Referral&__jvsd=s3C3Jfwb&__jvsc=Twitter&bid=nH0QTKwF'>ServiceNow Careers - Senior Security Risk Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -104,7 +104,7 @@ to enhance cyber adversary detection, network defense, and SOC process?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/harmonic/job/oM2tafwb'>Harmonic Inc. Careers - Sr. Network & Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/harmonic/job/oM2tafwb'>Harmonic Inc. Careers - Sr. Network & Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... In the context of IT network and security team enforcement, Harmonic recruits a 
 senior Network and Security engineer to deliver network and security services to
@@ -202,11 +202,11 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ironnet/job/ooBCafwv'>IronNet Cybersecurity Careers - Senior Software Engineer - Hybrid Cloud</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ironnet/job/ooBCafwv'>IronNet Cybersecurity Careers - Senior Software Engineer - Hybrid Cloud</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://twincap.join.com/jobs/260722-cyber-security-engineer'>Job @ TwinCap (Z?rich): Cyber Security Engineer | JOIN</a></h5> 
+<h5><a href='https://twincap.join.com/jobs/260722-cyber-security-engineer'>Job @ TwinCap (Z?rich): Cyber Security Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>14. Juli 2019 ... TwinCap GmbH has a job opening for Cyber Security Engineer in Z?rich (
 published: 15.07.2019). Apply now or check the other available jobs.</p>
@@ -246,7 +246,7 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/genesys/job/f9x6bqsu9dabqy4q8o5zzwyn4c'>Application Security Engineer | GENESYS Consulting Services, Inc.</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/genesys/job/f9x6bqsu9dabqy4q8o5zzwyn4c'>Application Security Engineer | GENESYS Consulting Services, Inc.</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -266,11 +266,11 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FSRLLC/743999676151820-sr-network-security-engineer'>FSR, LLC. Sr Network Security Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FSRLLC/743999676151820-sr-network-security-engineer'>FSR, LLC. Sr Network Security Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/anaplan/jobs/4041125002?gh_src=b9e24da22'>Job Application for Senior Security Architect at Anaplan</a></h5> 
+<h5><a href='https://boards.greenhouse.io/anaplan/jobs/4041125002?gh_src=b9e24da22'>Job Application for Senior Security Architect at Anaplan</a></h5> 
 <p><span class="badge badge-light">San Francisco, United States</span></p>
 <p>Posted on:: 2019-07-23</p>
 <hr/>
@@ -290,7 +290,7 @@ Review all of the job details and apply today!</p>
 <p>5 days ago ... DE, Wilmington is now hiring a Splunk Security Automation Metrics Engineer in 
 Wilmington, Delaware. Review all of the job details and apply today!</p>
 <hr/>
-<h5><a href='http://idsinternational.applytojob.com/apply/ZIwclq4mxz/AME-Security-Cooperation-Logistics-Analyst'>AM&amp;E Security Cooperation Logistics Analyst - IDS International - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://idsinternational.applytojob.com/apply/ZIwclq4mxz/AME-Security-Cooperation-Logistics-Analyst'>AM&amp;E Security Cooperation Logistics Analyst - IDS International - Career Page</a></h5> 
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -332,7 +332,7 @@ today!</p>
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/AC4AD69B1D'>Davy - Jobs: Information Security Analyst - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/AC4AD69B1D'>Davy - Jobs: Information Security Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 8, 2019 ... Apply online for the job of Information Security Analyst at Davy.</p>
 <hr/>
@@ -382,7 +382,7 @@ Product Security Engineer-Mobile | US - Sunnyvale, More... Paranoids Senior?...<
 <p><span class="badge badge-light">New York San Francisco</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/mattermost/29b85d07-c7f1-4ec5-80f3-a2f9ff4ac4ab'>Mattermost - Security Engineer, Infrastructure &amp; Operations (Remote)</a></h5> 
+<h5><a href='https://jobs.lever.co/mattermost/29b85d07-c7f1-4ec5-80f3-a2f9ff4ac4ab'>Mattermost - Security Engineer, Infrastructure &amp; Operations (Remote)</a></h5> 
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -410,7 +410,7 @@ Product Security Engineer-Mobile | US - Sunnyvale, More... Paranoids Senior?...<
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=ohhF9fw6&__jvst=Employee&__jvsd=sFo77gw2&__jvsc=Twitter&bid=ndIEPKwD'>Schneider Electric NAM Careers - Sr. Cybersecurity Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=ohhF9fw6&__jvst=Employee&__jvsd=sFo77gw2&__jvsc=Twitter&bid=ndIEPKwD'>Schneider Electric NAM Careers - Sr. Cybersecurity Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
